# Q-Learning-with-Autonomous-Mobile-Robots-ROS

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
.ipynb_checkpoints/: README-checkpoint.md
src/: lidar_helper.py  robot_controller.py  training_node.py
src/robotic_systems/: feedback_control_node.py  inference_node.py  lidar_helper.py  qlearning.py  robot_controller.py  robot_controller_node.py  training_node.py  visualize_results.ipynb
src/robotic_systems/data/: Q_table.csv  epsilon_per_episode.csv  reward_avg_per_episode.csv  reward_max_per_episode.csv  reward_min_per_episode.csv  reward_per_episode.csv  steps_per_episode.csv
src/robotic_systems/data_epsilon_grad_0999_max_episdoes_2000_fixed_start_position/: Q_table.csv  epsilon_per_episode.csv  reward_avg_per_episode.csv  reward_max_per_episode.csv  reward_min_per_episode.csv  reward_per_episode.csv  steps_per_episode.csv
src/robotic_systems/experiments/: experiments_tree.txt
src/robotic_systems/experiments/experiment_00/: Q_table.csv  hyper-parameters.txt  reward_avg_per_episode.csv  reward_min_per_episode.csv  reward_per_episode.csv  steps_per_episode.csv
src/robotic_systems/experiments/experiment_01/: Q_table.csv  epsilon_per_episode.csv  hyper-parameters.txt  reward_avg_per_episode.csv  reward_max_per_episode.csv  reward_min_per_episode.csv  reward_per_episode.csv  steps_per_episode.csv
src/robotic_systems/utils/: constants.py  inference_node_utils.py  lidar_utils.py  qlearning.py  robot_controller_utils.py  robot_utils.py  rospy_utils.py  training_node_utils.py
(+55 files in other folders)
